--- a/frontend/src/app/pacientes/formulario-paciente/endereco/endereco.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/endereco/endereco.component.html
@@ -7,22 +7,31 @@
                         [options]="opcoesDeMunicipio"
                         formControlName="municipio"
                         filter="true"
-                        pTooltip="Imforme um municipio."
                         (onChange)="aoSelecionarMunicipio()"
                     ></p-dropdown>
                     <label>Municipio</label>
                 </span>
+                <p-message
+                    severity="error"
+                    text="O campo 'Municipio' é obrigátorio."
+                    *ngIf="enderecos.get('municipio').touched && enderecos.get('municipio').invalid"
+                ></p-message>
             </div>
             <div class="ui-g-5 ui-sm-12">
                 <span class="ui-float-label">
                     <p-inputMask
                         placeholder="__.___-___"
                         mask="99.999-999"
-                        formControlName="CEP"
+                        formControlName="cep"
                         pTooltip="Informe o CEP."
                     ></p-inputMask>
                     <label>CEP</label>
                 </span>
+                <p-message
+                    severity="error"
+                    text="O campo 'CEP' é obrigátorio."
+                    *ngIf="enderecos.get('cep').touched && enderecos.get('cep').invalid"
+                ></p-message>
             </div>
         </div>
         <div class="ui-g-12">
@@ -51,16 +60,27 @@
                     />
                     <Label>Logradouro</Label>
                 </span>
+                <p-message
+                    severity="error"
+                    text="O campo 'Logradouro' é obrigátorio."
+                    *ngIf="
+                        enderecos.get('logradouro').touched && enderecos.get('logradouro').invalid
+                    "
+                ></p-message>
             </div>
             <div class="ui-g-4">
                 <span class="ui-float-label">
                     <p-dropdown
                         [options]="opcoesDeTipoDeEndereco"
                         formControlName="tipo"
-                        pTooltip="Informe o tipo de endereço."
                     ></p-dropdown>
                     <label>Tipo de Endereço</label>
                 </span>
+                <p-message
+                    severity="error"
+                    text="O campo 'Tipo de Endereço' é obrigátorio."
+                    *ngIf="enderecos.get('tipo').touched && enderecos.get('tipo').invalid"
+                ></p-message>
             </div>
         </div>
         <div class="ui-g-12 ui-fluid">
@@ -69,18 +89,23 @@
                     <input
                         pInputText
                         type="text"
-                        formControlName="Numero"
+                        formControlName="numero"
                         pTooltip="Informe o Numero."
                     />
                     <Label>Número</Label>
                 </span>
+                <p-message
+                    severity="error"
+                    text="O campo 'Número' é obrigátorio."
+                    *ngIf="enderecos.get('numero').touched && enderecos.get('numero').invalid"
+                ></p-message>
             </div>
             <div class="ui-g-4">
                 <span class="ui-float-label">
                     <input
                         pInputText
                         type="text"
-                        formControlName="Complemento"
+                        formControlName="complemento"
                         pTooltip="Informe o Complemento."
                     />
                     <label>Complemento</label>
@@ -91,20 +116,33 @@
                     <input
                         pInputText
                         type="text"
-                        formControlName="Bairro"
+                        formControlName="bairro"
                         pTooltip="Informe o Bairro."
                     />
                     <label>Bairro</label>
                 </span>
+                <p-message
+                    severity="error"
+                    text="O campo 'Bairro' é obrigátorio."
+                    *ngIf="enderecos.get('bairro').touched && enderecos.get('bairro').invalid"
+                ></p-message>
             </div>
 
             <div class="ui-g-3">
                 <p-triStateCheckbox
                     name="corespondencia"
-                    formControlName="corespondencia"
+                    formControlName="correspondencia"
                     label="Correspondência"
                 ></p-triStateCheckbox>
             </div>
+            <p-message
+                severity="error"
+                text="O campo 'Correspondência' é obrigátorio."
+                *ngIf="
+                    enderecos.get('correspondencia').touched &&
+                    enderecos.get('correspondencia').invalid
+                "
+            ></p-message>
             <div class="ui-g-3">
                 <p-triStateCheckbox label="Não Localizei o Endereço"></p-triStateCheckbox>
             </div>
