--- a/frontend/src/app/pacientes/formulario-paciente/telefone/telefone.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/telefone/telefone.component.html
@@ -13,6 +13,11 @@
                     ></p-inputMask>
                     <label>DDD</label>
                 </span>
+                <p-message
+                    severity="error"
+                    text="O campo 'DDD' é obrigátorio."
+                    *ngIf="telefones.get('DDD').touched && telefones.get('DDD').invalid"
+                ></p-message>
             </div>
             <div class="ui-g-5 ui-sm-12">
                 <span class="ui-float-label">
@@ -26,6 +31,11 @@
                     ></p-inputMask>
                     <label>Telefone</label>
                 </span>
+                <p-message
+                    severity="error"
+                    text="O campo 'Telefone' é obrigátorio."
+                    *ngIf="telefones.get('telefone').touched && telefones.get('telefone').invalid"
+                ></p-message>
             </div>
         </div>
         <div class="ui-g-12">
@@ -34,11 +44,15 @@
                     <p-dropdown
                         [options]="opcoesDeTipoDeTelefone"
                         formControlName="tipo"
-                        pTooltip="Informe o tipo de telefone."
                         filter="true"
                     ></p-dropdown>
                     <label>Tipo de Telefone</label>
                 </span>
+                <p-message
+                    severity="error"
+                    text="O campo 'Tipo de Telefone' é obrigátorio."
+                    *ngIf="telefones.get('tipo').touched && telefones.get('tipo').invalid"
+                ></p-message>
             </div>
             <div class="ui-g-5 ui-sm-12">
                 <span class="ui-float-label">
@@ -53,7 +67,7 @@
                 </span>
             </div>
         </div>
-        <p-button label="Adicionar" type="submit" [disabled]="telefone.invalid"></p-button>
+        <p-button label="Adicionar" type="submit" [disabled]="true"></p-button>
         <basis-datatable type="memory" [value]="fakeData">
             <p-column header="Tipo" field="tipo"></p-column>
             <p-column header="DDD" field="DDD"></p-column>
