Altera alguns detalhes visuais

--- a/frontend/src/app/pacientes/formulario-paciente/dados-pessoais/dados-pessoais.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/dados-pessoais/dados-pessoais.component.html
@@ -7,6 +7,7 @@
                     pInputText
                     pTooltip="Digite o nome do paciente."
                     formControlName="nome"
+                    required="true"
                 />
                 <label>Nome Completo</label>
             </span>
@@ -47,7 +48,7 @@
                     formControlName="raca"
                     filter="true"
                 ></p-dropdown>
-                <label>Raça</label>
+                <label>Raça/Cor</label>
             </span>
             <p-message
                 severity="error"
