Subindo alteração triagem

--- a/frontend/src/app/pacientes/triagem/triagem.component.html
+++ b/frontend/src/app/pacientes/triagem/triagem.component.html
@@ -1,7 +1,7 @@
 <div class="ui-g ui-fluid">
     <div class="ui-g-12">
         <div class="card card-w-title">
-            <h1>Pesquisar Triagem</h1>
+            <h1>Triagem</h1>
             <div class="ui-g">
                 <div class="ui-g-12 ui-md-12 ui-fluid">
                     <span class="md-inputfield" style="margin-top: 5px;">
