preenchendo campo nome do paciente BASIS-118658

--- a/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
+++ b/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
@@ -11,7 +11,7 @@
                     <div class="ui-g-12">
                         <div class="ui-g-12">
                             <span class="md-inputfield">
-                                <input type="text" pInputText disabled/>
+                                <input type="text" [(ngModel)]="paciente.nome" name="nome" pInputText disabled />
                                 <label>Paciente</label>
                             </span>
                         </div>
